# Generic-Markov-Chain

./: CMakeLists.txt  README.md  linked_list.c  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
